[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-helpers"
version = "0.1"
description = "helpful algorithms and tools for advent of code"
requires-python = ">=3.9"

[[project.authors]]
name = "Juhana Autti"
email = "juhana.autti@gmail.com"

[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/auttij/aoc-helpers"

[tool.setuptools]
packages = ["aoch"]